--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           	<!-- banner text -->
             <div class="banner_text">
               <!-- h1 -->
-              <h1>Checify - Connecting through every meal</h1>
+              <h1>Checify - Facilitate and host your dating event</h1>
               <!-- p -->
               <p>Lorem Ipsum is simply dummy text of the printing and setting indus orem Ipsum has been the industrys standard dummy text ever.
               </p>
