--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <!-- h1 -->
               <h1>Checify - Facilitate and host your dating event</h1>
               <!-- p -->
-              <p>Lorem Ipsum is simply dummy text of the printing and setting indus orem Ipsum has been the industrys standard dummy text ever.
+              <p>Meet your potential soulmate at a fine restaurant with a curated menu, hosted by professional waitstaff.
               </p>
             </div>
 
