--- a/checify/index.html
+++ b/checify/index.html
@@ -170,12 +170,18 @@
                     </ul>
                 </div>
                 <div class="col-lg-6">
-                    <div class="row g-3">
-                        <div class="col-12">
-                            <div class="mx-auto" style="max-width: 320px;">
-                                <div class="position-relative bg-white shadow-soft ring rounded-4 overflow-hidden"
-                                    style="aspect-ratio:9/19">
-                                    <img src="img/Home.png" alt="">
+                    <div class="row g-3 d-flex align-items-center">
+                        <div class="col-6">
+                            <div class="mx-auto">
+                                <div class="position-relative bg-white shadow-soft ring rounded-4 overflow-hidden">
+                                    <img src="img/Add Me.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                         <div class="col-6">
+                            <div class="mx-auto">
+                                <div class="position-relative bg-white shadow-soft ring rounded-4 overflow-hidden">
+                                    <img src="img/Confirm Add Me.png" alt="">
                                 </div>
                             </div>
                         </div>
