--- a/checify/index.html
+++ b/checify/index.html
@@ -25,8 +25,8 @@
             <!-- Logo -->
             <a href="index.html" class="d-flex align-items-center gap-2 logo-brand">
                 <div class="d-grid place-items-center bg-brand text-white fw-black rounded-4"
-                    style="width:36px;height:36px;background:var(--brand);padding: 0.5em;">
-                    <img src="img/logo.png" alt="">
+                    style="width:28px;">
+                    <img src="img/favicon.png" alt="">
                 </div>
                 <span class="fw-bold-900 fs-5">Checify</span>
             </a>
@@ -612,8 +612,8 @@
         <div class="container-xxl d-flex flex-column flex-lg-row align-items-center justify-content-between gap-3">
             <div class="d-flex align-items-center gap-2 text-charcoal">
                 <div class="d-grid place-items-center bg-brand text-white fw-black rounded-4"
-                    style="width:36px;height:36px;background:var(--brand);padding: 0.5em;">
-                    <img src="img/logo.png" alt="">
+                    style="width:28px;">
+                    <img src="img/favicon.png" alt="">
                 </div>
                 <span>© <span id="year"></span> Checify</span>
             </div>
