--- a/checify/index.html
+++ b/checify/index.html
@@ -117,7 +117,7 @@
                 <div class="col-md-4">
                     <div class="p-4 rounded-2xl ring" style="background: var(--rose-soft)">
                         <div class="d-inline-flex align-items-center justify-content-center rounded-3 mb-2"
-                            style="width:40px;height:40px;background:rgba(108,99,255,.12); color:var(--brand)"><i
+                            style="width:40px;height:40px;background:rgba(108,99,255,.12);"><i
                                 class="bi bi-stars"></i></div>
                         <h3 class="h5 fw-semibold">Choose a themed menu</h3>
                         <p class="text-charcoal mb-0">Explore menus designed by waitstaff who know the chef’s strengths,
@@ -127,7 +127,7 @@
                 <div class="col-md-4">
                     <div class="p-4 rounded-2xl ring" style="background: var(--rose-soft)">
                         <div class="d-inline-flex align-items-center justify-content-center rounded-3 mb-2"
-                            style="width:40px;height:40px;background:rgba(108,99,255,.12); color:var(--brand)"><i
+                            style="width:40px;height:40px;background:rgba(108,99,255,.12); "><i
                                 class="bi bi-heart"></i></div>
                         <h3 class="h5 fw-semibold">We match compatible diners</h3>
                         <p class="text-charcoal mb-0">Tell us your vibe and dietary prefs. We seat you with someone who
@@ -137,7 +137,7 @@
                 <div class="col-md-4">
                     <div class="p-4 rounded-2xl ring" style="background: var(--rose-soft)">
                         <div class="d-inline-flex align-items-center justify-content-center rounded-3 mb-2"
-                            style="width:40px;height:40px;background:rgba(108,99,255,.12); color:var(--brand)"><i
+                            style="width:40px;height:40px;background:rgba(108,99,255,.12);"><i
                                 class="bi bi-calendar-date"></i></div>
                         <h3 class="h5 fw-semibold">Meet at the restaurant</h3>
                         <p class="text-charcoal mb-0">Arrive to a reserved table, hosted by the staff curator.
